2005-05-15  Michael Yount <csf@moscow.com>

	* lib/Mj/Deliver/Dest.pm:  (make_qqenvelope)  Support
	personalization under qmail.
	Implemented by John Levine.

	* lib/Mj/Deliver/QQEnvelope.pm:  (new, address, send)
	Support personalization under qmail.
	Implemented by John Levine.

2005-05-09  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_taboo_body)  The maximum line
	count should always be zero (unlimited) if an unlimited
	pattern is used.  Fixed by Richard Birkett.

2005-04-29  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch)  The "nomessage" mode requires
	an administrative password.

	* lib/Mj/CommandProps.pm:  Support the "nomessage" command mode.

	* lib/Mj/Parser.pm:  (parse_part)  Do not mail the results to
	the address specified by the "default user" command if the
	"nomessage" command mode is used.

2005-04-28  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_alias)  Make the target the canonical
	address rather than the aliased address.
	(who_chunk)  Use the target to find bookkeeping aliases.
	Thanks to John Levine.

	* lib/Mj/Addr.pm:  (_alias)  Do not use alias information from
	a bookkeeping alias.

2005-03-16  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect)  Use delete instead of undef
	to quell a warning.  Thanks to SRE.

2005-03-06  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (_r_strip_body)  Mark the body as changed
	when a multipart message is condensed to a single part.
	Thanks to Richard Birkett.

2005-02-26  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch)  Account for the possibility
	of a failed "owner" event.

	* lib/Mj/Access.pm:  (_a_mailfile)  Take pains to prevent
	a mail loop of the whoami_owner address with itself.
	(_d_owner)  Messages to the list owners are now subject to 
	the access rules.

	* lib/Mj/CommandProps.pm:  Messages to the list owners are
	now subject to the access rules.

	* lib/Mj/Inform.pm:  (_inform_owner)  Take pains to prevent